Fix header issues and tweak formatting on mobile phones

--- a/themes/customized-hugo-profile/static/style.css
+++ b/themes/customized-hugo-profile/static/style.css
@@ -1,20 +1,3 @@
-/* hugo-dynamic-tabs
-.nav-tabs {
-    border-bottom: 1px solid transparent;
-}
-
-.nav-tabs .nav-item.show .nav-link,
-.nav-tabs .nav-link.active {
-    color: #495057;
-    background-color: transparent;
-    border-color: transparent transparent white;
-}
-
-.nav-tabs .nav-link:focus,
-.nav-tabs .nav-link:hover {
-    border-color: transparent transparent grey;
-} */
-
 .light>* {
     background-image: linear-gradient(38.73deg,
             rgb(0 37 204 / 25%) 0%,
@@ -32,7 +15,7 @@
         linear-gradient(141.27deg,
             rgba(0, 70, 209, 0) 50%,
             rgb(174 0 209 / 25%) 100%);
-    background-attachment: fixed;
+    background-color: black;
 }
 
 /* index.css */
@@ -65,17 +48,30 @@
 
 /* Make the header sticky */
 header {
-    top: 0;
-    position: sticky;
+    position: fixed;
+    width: 100%;
     -webkit-backdrop-filter: blur(20px) saturate(0.8) !important;
     backdrop-filter: blur(20px) saturate(0.2) !important;
-    /* background-image: none !important; */
     --background-color: rgba(0, 0, 0, 0);
-    /* color: rgba(0, 0, 0, 0) !important; */
-    /* opacity: 0.5; */
 }
 
-/* Prevent sticky header from covering section titles when clicking navbar links */
+/* Add some top padding to the content so that the header doesn't cover it */
+#content {
+    padding-top: 70px;
+}
+
+/* Move header out of the way when scrolling on phones, and reduce top padding. */
+@media (max-width: 768px) {
+    header {
+        position: absolute;
+    }
+
+    #content {
+        padding-top: 20px;
+    }
+}
+
+/* Prevent header from covering section titles when clicking navbar links */
 .py-0,
 .py-5 {
     scroll-margin-top: 2em;
@@ -86,12 +82,7 @@ header {
 /* Set Ubuntu as default font for body */
 body {
     font-family: "Ubuntu", serif !important;
-    /* min-height: 100%; */
-    /* background-color: black; */
 }
-/* html {
-    min-height: 100%;
-} */
 
 /* Set Ubuntu as secondary font */
 .secondary-font,
@@ -117,6 +108,17 @@ body {
     font-size: 16px !important;
 }
 
+
+.card {
+    border-radius: 40px !important;
+    padding: 15px;
+    box-shadow: 0 30px 60px rgba(0, 0, 0, 0.5) !important;
+}
+
+.toc {
+    overflow: auto !important;
+}
+
 /* format links nicely in list pages */
 /* #list-page a {
     display: inline-block;
@@ -140,29 +142,3 @@ body {
 #list-page a:active::after {
     width: 100%;
 } */
-
-.card {
-    /* -webkit-backdrop-filter: blur(20px) saturate(0.8) !important;
-    backdrop-filter: blur(20px) saturate(0.8) !important;
-    opacity: 0.3 !important;
-    background: rgb(0 0 0 / 20%) !important; */
-    border-radius: 40px !important;
-    padding: 15px;
-    box-shadow: 0 30px 60px rgba(0, 0, 0, 0.5) !important;
-}
-
-/* #list-page .card-text * {
-    background-color: rgba(0, 0, 0, 0) !important;
-} */
-
-/* #list-page .post-footer * {
-    background-color: rgba(0, 0, 0, 0) !important;
-} */
-
-.toc {
-    overflow: auto !important;
-}
-
-:root {
-    --bs-body-bg: black
-}
